--- a/environment.yml
+++ b/environment.yml
@@ -1,91 +1,91 @@
-name: Becca
+name: netcdf_2
 channels:
   - conda-forge
-  - bioconda
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_llvm
-  - attrs=19.3.0=py_0
-  - backcall=0.1.0=py_0
-  - bleach=3.1.4=pyh9f0ad1d_0
-  - bzip2=1.0.8=h516909a_2
-  - ca-certificates=2020.4.5.1=hecc5488_0
-  - certifi=2020.4.5.1=py36h9f0ad1d_0
-  - cftime=1.1.1.2=py36h785e9b2_0
-  - curl=7.69.1=h33f0ec9_0
-  - decorator=4.4.2=py_0
-  - defusedxml=0.6.0=py_0
-  - entrypoints=0.3=py36h9f0ad1d_1001
-  - hdf4=4.2.13=hf30be14_1003
-  - hdf5=1.10.5=nompi_h3c11f04_1104
-  - importlib-metadata=1.6.0=py36h9f0ad1d_0
-  - importlib_metadata=1.6.0=0
-  - ipykernel=5.2.1=py36h95af2a2_0
-  - ipython=7.13.0=py36h9f0ad1d_2
-  - ipython_genutils=0.2.0=py_1
-  - jedi=0.17.0=py36h9f0ad1d_0
-  - jinja2=2.11.2=pyh9f0ad1d_0
-  - jpeg=9c=h14c3975_1001
-  - jsonschema=3.2.0=py36h9f0ad1d_1
-  - jupyter_client=6.1.3=py_0
-  - jupyter_core=4.6.3=py36h9f0ad1d_1
-  - krb5=1.17.1=h2fd8d38_0
-  - ld_impl_linux-64=2.34=h53a641e_0
-  - libblas=3.8.0=16_openblas
-  - libcblas=3.8.0=16_openblas
-  - libcurl=7.69.1=hf7181ac_0
-  - libedit=3.1.20170329=hf8c457e_1001
-  - libffi=3.2.1=he1b5a44_1007
-  - libgcc-ng=9.2.0=h24d8f2e_2
-  - libgfortran-ng=7.3.0=hdf63c60_5
-  - liblapack=3.8.0=16_openblas
-  - libnetcdf=4.7.1=nompi_h94020b1_102
-  - libopenblas=0.3.9=h5ec1e0e_0
-  - libsodium=1.0.17=h516909a_0
-  - libssh2=1.8.2=h22169c7_2
-  - libstdcxx-ng=9.2.0=hdf63c60_2
-  - llvm-openmp=10.0.0=hc9558a2_0
-  - markupsafe=1.1.1=py36h8c4c3a4_1
-  - mistune=0.8.4=py36h8c4c3a4_1001
-  - nbconvert=5.6.1=py36h9f0ad1d_1
-  - nbformat=5.0.6=py_0
-  - ncurses=6.1=hf484d3e_1002
-  - netcdf4=1.5.1.2=py36hf3213d6_2
-  - notebook=6.0.3=py36_0
-  - numpy=1.18.1=py36h7314795_1
-  - openssl=1.1.1g=h516909a_0
-  - pandas=1.0.3=py36h830a2c2_1
-  - pandoc=2.9.2.1=0
-  - pandocfilters=1.4.2=py_1
-  - parso=0.7.0=pyh9f0ad1d_0
-  - pexpect=4.8.0=py36h9f0ad1d_1
-  - pickleshare=0.7.5=py36h9f0ad1d_1001
-  - pip=20.0.2=py_2
-  - prometheus_client=0.7.1=py_0
-  - prompt-toolkit=3.0.5=py_0
-  - ptyprocess=0.6.0=py_1001
-  - pygments=2.6.1=py_0
-  - pyrsistent=0.16.0=py36h8c4c3a4_0
-  - python=3.6.10=h8356626_1011_cpython
-  - python-dateutil=2.8.1=py_0
-  - python_abi=3.6=1_cp36m
-  - pytz=2020.1=pyh9f0ad1d_0
-  - pyzmq=19.0.0=py36h9947dbf_1
-  - readline=8.0=hf8c457e_0
-  - send2trash=1.5.0=py_0
-  - setuptools=46.1.3=py36h9f0ad1d_0
-  - six=1.14.0=py_1
-  - sqlite=3.30.1=hcee41ef_0
-  - terminado=0.8.3=py36h9f0ad1d_1
-  - testpath=0.4.4=py_0
-  - tk=8.6.10=hed695b0_0
-  - tornado=6.0.4=py36h8c4c3a4_1
-  - traitlets=4.3.3=py36h9f0ad1d_1
-  - wcwidth=0.1.9=pyh9f0ad1d_0
-  - webencodings=0.5.1=py_1
-  - wheel=0.34.2=py_1
-  - xz=5.2.5=h516909a_0
-  - zeromq=4.3.2=he1b5a44_2
-  - zipp=3.1.0=py_0
-  - zlib=1.2.11=h516909a_1006
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - attrs=19.3.0
+  - backcall=0.1.0
+  - bleach=3.1.4
+  - bzip2=1.0.8
+  - ca-certificates=2020.4.5.1
+  - certifi=2020.4.5.1
+  - cftime=1.1.1.2
+  - curl=7.69.1
+  - decorator=4.4.2
+  - defusedxml=0.6.0
+  - entrypoints=0.3
+  - hdf4=4.2.13
+  - hdf5=1.10.6
+  - importlib-metadata=1.6.0
+  - importlib_metadata=1.6.0
+  - ipykernel=5.2.1
+  - ipython=7.13.0
+  - ipython_genutils=0.2.0
+  - jedi=0.17.0
+  - jinja2=2.11.2
+  - jpeg=9c
+  - jsonschema=3.2.0
+  - jupyter_client=6.1.3
+  - jupyter_core=4.6.3
+  - krb5=1.17.1
+  - ld_impl_linux-64=2.34
+  - libblas=3.8.0
+  - libcblas=3.8.0
+  - libcurl=7.69.1
+  - libedit=3.1.20170329
+  - libffi=3.2.1
+  - libgcc-ng=9.2.0
+  - libgfortran-ng=7.3.0
+  - liblapack=3.8.0
+  - libnetcdf=4.7.4
+  - libopenblas=0.3.9
+  - libsodium=1.0.17
+  - libssh2=1.8.2
+  - libstdcxx-ng=9.2.0
+  - llvm-openmp=10.0.0
+  - markupsafe=1.1.1
+  - mistune=0.8.4
+  - nbconvert=5.6.1
+  - nbformat=5.0.6
+  - ncurses=6.1
+  - netcdf4=1.5.3
+  - notebook=6.0.3
+  - numpy=1.18.1
+  - openssl=1.1.1g
+  - pandas=1.0.3
+  - pandoc=2.9.2.1
+  - pandocfilters=1.4.2
+  - parso=0.7.0
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pip=20.1
+  - prometheus_client=0.7.1
+  - prompt-toolkit=3.0.5
+  - ptyprocess=0.6.0
+  - pygments=2.6.1
+  - pyrsistent=0.16.0
+  - python=3.6.10
+  - python-dateutil=2.8.1
+  - python_abi=3.6
+  - pytz=2020.1
+  - pyzmq=19.0.0
+  - readline=8.0
+  - send2trash=1.5.0
+  - setuptools=46.1.3
+  - six=1.14.0
+  - sqlite=3.30.1
+  - terminado=0.8.3
+  - testpath=0.4.4
+  - tk=8.6.10
+  - tornado=6.0.4
+  - traitlets=4.3.3
+  - wcwidth=0.1.9
+  - webencodings=0.5.1
+  - wheel=0.34.2
+  - xz=5.2.5
+  - zeromq=4.3.2
+  - zipp=3.1.0
+  - zlib=1.2.11
+
